syntax = "proto3";
package monitor;

message HostInfo {
	string hostname = 1;
	string ipAddress = 2;
}